--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -185,7 +185,7 @@
     width: 380px;
     padding: 15px;
     border: none;
-    background-color: $theme-green;
+    background-color: red;
     color: white;
     border-radius: 3px;
     margin-bottom: 50px;
