Fixed : 동적 라우팅 적용했습니다.

--- a/src/pages/ProductList/components/ProductCard.scss
+++ b/src/pages/ProductList/components/ProductCard.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/variables.scss';
 
 .productCard {
+  cursor: pointer;
   padding: 12px 8px 36px 8px;
   flex: 0 0 25%;
   max-width: 25%;
