카테고리 구현중!!

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -53,6 +53,15 @@
       }
 
       .allOfMenu {
+        .menuOpenReveal {
+          &:hover {
+            background-color: #dff9ec;
+          }
+          transition: transform 0.4s;
+        }
+        .menuOpenDisapper {
+          display: none;
+        }
         @include flex-center;
         font-size: 16px;
 
