--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -185,11 +185,11 @@
     width: 380px;
     padding: 15px;
     border: none;
-    background-color: red;
+    background-color: $theme-green;
     color: white;
     border-radius: 3px;
     margin-bottom: 50px;
-    opacity: 0.8;
+    opacity: 0.7;
     &:hover {
       cursor: pointer;
     }
