--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -58,7 +58,7 @@
     span {
       font-size: 17px;
       font-weight: 500;
-      // margin-top: 4px;
+      margin-top: 3px;
       // 센터로 다 맞췄는데도 이상해서 어거지로 정렬함
     }
   }
