--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,16 +1,15 @@
 @import '../../styles/variables.scss';
 
 .nav {
-  color: $font-gray;
-  font-size: 16px;
-  width: 100%;
   position: fixed;
+  width: 100%;
+  color: $font-gray;
   background-color: white;
+  font-size: 16px;
 
   .navFirstLine {
-    display: flex;
+    @include flex-center;
     justify-content: space-between;
-    align-items: center;
     padding: 40px 150px 0px 150px;
 
     .navFirstLeft {
@@ -21,16 +20,43 @@
       display: flex;
       font-size: 15px;
 
+      .signUpBtn {
+        a {
+          color: $theme-green;
+          text-decoration: none;
+        }
+      }
+
       .loginBtn {
-        border-left: 1px solid #c9cacc;
-        border-right: 1px solid #c9cacc;
         padding: 0 10px;
         margin: 0 10px;
-      }
-      .as {
+        border-left: 1px solid #c9cacc;
         border-right: 1px solid #c9cacc;
+
+        a {
+          color: $font-gray;
+          text-decoration: none;
+        }
+      }
+
+      .as {
         padding-right: 10px;
         margin-right: 10px;
+        border-right: 1px solid #c9cacc;
+
+        a {
+          color: $font-gray;
+          text-decoration: none;
+        }
+      }
+
+      li {
+        &:last-child {
+          a {
+            color: $font-gray;
+            text-decoration: none;
+          }
+        }
       }
     }
   }
@@ -45,35 +71,32 @@
     .navSecondLineLeft {
       @include flex-center;
 
+      a {
+        color: $font-gray;
+        text-decoration: none;
+      }
+
       .subScriptionMenu,
       .oneMenuPurchase {
-        border-left: 1px solid #c9cacc;
         margin-left: 10px;
         padding-left: 10px;
+        border-left: 1px solid #c9cacc;
       }
 
       .allOfMenu {
-        .menuOpenReveal {
-          &:hover {
-            background-color: #dff9ec;
-          }
-          transition: transform 0.4s;
-        }
-        .menuOpenDisapper {
-          display: none;
-        }
         @include flex-center;
         font-size: 16px;
 
         &:hover {
           color: $theme-green;
         }
+
         .fa-bars {
           @include flex-center;
         }
+
         li {
           margin-left: 8px;
-          // line-height: 20px;
         }
       }
     }
@@ -81,9 +104,10 @@
     .navSecondLineRight {
       @include flex-center;
       font-size: 15px;
+
       .cart {
-        border-right: 1px solid #c9cacc;
         padding-right: 10px;
+        border-right: 1px solid #c9cacc;
       }
 
       i {
@@ -92,23 +116,21 @@
       }
 
       .searchWrap {
+        margin-right: 3px;
         border: 1px solid $border-gray;
         border-radius: 5px;
-        margin-right: 3px;
 
         input {
-          border: none;
-          outline: none;
           width: 170px;
           padding: 3px 0;
+          border: none;
+          outline: none;
 
           &:focus::-webkit-input-placeholder {
             color: transparent;
-            // 이거 새로 배움
           }
 
           &::placeholder {
-            // 이거 :랑 ::차이 다시 공부하기
             color: rgb(182, 182, 182);
             font-size: 16px;
           }
@@ -122,20 +144,22 @@
   }
 
   p {
-    font-size: 18px;
-    color: $border-gray;
     margin: 0 3px;
+    color: $border-gray;
+    font-size: 18px;
   }
 
   .themeColor {
     color: $theme-green;
     text-decoration: none;
   }
+
   .fontGray {
     color: $font-gray;
     text-decoration: none;
   }
 }
+
 .menuContainer {
   display: flex;
   margin-left: 150px;
@@ -144,20 +168,14 @@
     width: 160px;
     height: 300px;
     background-color: white;
-    border: 1px solid $border-gray;
-    // 이건 지워도 됨
 
     li {
       color: black;
       &:first-child {
         padding: 25px 15px 15px 15px;
-        // background-color: #dff9ec;
-        // 이건 호버했을 떄 변할 값
       }
       &:last-child {
         padding: 25px 15px 15px 15px;
-        // background-color: #dff9ec;
-        // 이건 호버했을 떄 변할 값
       }
     }
   }
@@ -167,11 +185,10 @@
     background-color: #dff9ec;
 
     a {
-      text-decoration: none;
       color: black;
-      // color: #27b06e;
-      // 데코레이션 뺴고 컬러 바꾸면 됨. 호버 적용할때 값
+      text-decoration: none;
     }
+
     li {
       &:nth-child(1) {
         padding: 25px 15px 15px 15px;
@@ -184,15 +201,15 @@
       }
     }
   }
+
   .menuFirstOfSecond {
     width: 160px;
     height: 300px;
     background-color: #dff9ec;
 
     a {
-      text-decoration: none;
       color: black;
-      // color: #27b06e;
+      text-decoration: none;
     }
     li {
       &:nth-child(1) {
