--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -114,6 +114,10 @@
         margin-left: 10px;
         margin-right: 12px;
       }
+      a {
+        color: $font-gray;
+        text-decoration: none;
+      }
 
       .searchWrap {
         margin-right: 3px;
