--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -185,6 +185,10 @@
           padding: 40px 0;
           border-top: 1px solid#3d3d3d;
 
+          p {
+            font-weight: bold;
+          }
+
           span {
             font-weight: bold;
             font-size: 24px;
